--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -1,45 +1,66 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/item_image_card"
+    app:cardUseCompatPadding="true"
+    android:layout_marginTop="10dp"
+    android:layout_marginLeft="10dp"
+    android:layout_marginRight="10dp">
 
-    <RelativeLayout
+    <LinearLayout
+        android:orientation="vertical"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        android:orientation="vertical">
+        android:background="@color/cardview_light_background">
 
-        <TextView
-            android:id="@+id/txtkomoditas"
+        <ImageView
+            android:id="@+id/card_img"
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:adjustViewBounds="true"
+            android:transitionName="imageCover"
+            android:scaleType="centerCrop"
+            android:background="@color/light_gray"/>
+
+        <RelativeLayout
+            android:id="@+id/item_image_text_container"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="Komoditas"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:padding="10dp"
+            android:elevation="10dp"
+            android:background="@color/cardview_light_background">
 
-        <TextView
-            android:id="@+id/txtHarga"
-            android:layout_alignParentLeft="true"
-            android:layout_below="@+id/txtkomoditas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Harga : 1900"
-            android:textSize="15sp"
-            android:layout_marginTop="5dp"
-            android:textStyle="italic" />
+            <TextView
+                android:id="@+id/card_author"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/black"
+                android:lines="1"
+                android:text="By:"
+                android:ellipsize="end"
+                android:textSize="16sp" />
 
-        <TextView
-            android:id="@+id/txtunit"
-            android:layout_alignParentRight="true"
-            android:layout_below="@+id/txtkomoditas"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Rp/kg"
-            android:textSize="15sp"
-            android:layout_marginTop="5dp"
-            android:textStyle="italic" />
+            <TextView
+                android:id="@+id/card_liked"
+                android:layout_alignParentRight="true"
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:fontFamily="sans-serif-medium"
+                android:textColor="@color/black"
+                android:lines="1"
+                android:drawableLeft="@drawable/ic_favorite"
+                android:text="100"
+                android:ellipsize="end"
+                android:textSize="18sp" />
 
-    </RelativeLayout>
 
-</LinearLayout>
+
+
+        </RelativeLayout>
+
+    </LinearLayout>
+
+</android.support.v7.widget.CardView>
