--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -21,7 +21,7 @@
             android:layout_height="wrap_content"
             android:adjustViewBounds="true"
             android:transitionName="imageCover"
-            android:scaleType="centerCrop"
+            android:scaleType="fitXY"
             android:background="@color/light_gray"/>
 
         <RelativeLayout
