--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,5 +13,8 @@
         <item name="colorPrimaryDark">@color/white</item>
         <item name="android:textColorPrimary">@color/black</item>
     </style>
-
+    <style name="translucent" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:windowBackground" >@color/transparent</item>
+        <item name="android:windowIsTranslucent">true</item>
+    </style>
 </resources>
